--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,19 +36,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-23_brogrammers_mfccs_3s_combined_coughs_inlcude_augments.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-28_PredictionLevelMIL_mfcc_mfcc_mil_combined_cough_bag_statistics_linear_combination4.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
-      "           smoothing:                     10\n",
-      "           ignore_first_n_epochs:         10\n",
+      "           smoothing:                     5\n",
+      "           ignore_first_n_epochs:         5\n",
       "\n",
       "Datasets used:\n",
-      "mfccs_3s_combined_coughs\n",
-      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
+      "mfcc_mil_combined_cough\n",
+      "           dataset_class:                 <class 'datasets.MultipleInstanceLearningMFCC'>\n",
       "           participants_file:             2023_02_23_mfcc_combined_coughs_3s.pickle\n",
-      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 2154  -  label '1': 2104\n",
+      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle', '2023_02_26_mfcc_combined_coughs_3s_x2x2augmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 4292  -  label '1': 2700\n",
       "           types_of_recording:            combined_coughs\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -56,7 +56,7 @@
       "           n_time_steps:                  259\n",
       "           n_features:                    15\n",
       "           sample_rate:                   22050\n",
-      "           n_fft:                         4096\n",
+      "           n_fft:                         8192\n",
       "           window_length:                 512\n",
       "           hop_size:                      256\n",
       "           fmin:                          0\n",
@@ -64,21 +64,25 @@
       "           hop_size_ms:                   11.61\n",
       "           window_length_ms:              23.22\n",
       "           duration_seconds:              3.01\n",
-      "           fft_res_hz:                    5.38\n",
+      "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
       "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
       "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
       "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
       "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
-      "           model:                         BrogrammersModel\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
+      "           model:                         PredLevelMIL\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                10\n",
-      "           folds per run:                 5\n",
-      "           epochs:                        100\n"
+      "           parameter runs:                1\n",
+      "           folds per run:                 1\n",
+      "           epochs:                        80\n"
      ]
     }
    ],
@@ -89,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "659bf63edac24e12b57a7e4061fee3cf",
+       "model_id": "4918e1454c2a43178d7409ee4b8ed56f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -146,7 +150,8 @@
     }
    ],
    "source": [
-    "tracker.compute_overall_metrics(smooth_n_samples=10, ignore_first_n_epochs=10, metric_used_for_performance_analysis=\"auc_roc\")"
+    "n_samples = 10\n",
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
   {
@@ -165,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71e8edd41b9e459693100877194ad556",
+       "model_id": "0b48a0a5abcb4aa58bfc725737a6effd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc2ccf75bbe54be5914a1e3109f01493",
+       "model_id": "551ad021d0f849b8a241f727f2abac73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94f1d43fe9294db5a517bc22e7fb2e95",
+       "model_id": "1490c59d38164fa1be856d6a507ad712",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -304,27 +309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64904f0a271149c08cb67d697d2c0e2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '0.0005', 'wd': '0.0001',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
@@ -338,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f818736-cefe-4d84-b8d5-36f28f5e11b8",
+   "id": "23e205f6-8342-4672-8511-5a99c6039102",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -346,10 +336,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e205f6-8342-4672-8511-5a99c6039102",
+   "id": "fab5b5b8-c565-4899-8d90-fb9abc0249a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0571c5-1275-4792-a36e-937d0c4cdf2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.randn((8))\n",
+    "a.requires_grad = True\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44fd4ec0-bf0f-42e8-befb-58cbcf5c02de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.mean(), a.median(), a.std(), a.min(), a.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0195908-7f64-4309-afc0-5adde2e5a091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.Tensor([a.mean(), a.median(), a.std(), a.min(), a.max()])\n",
+    "b.requires_grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d38453a9-d1d0-4bee-ac5e-7df78a8046c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.stack([a.mean(), a.median(), a.std(), a.min(), a.max()])"
+   ]
   }
  ],
  "metadata": {
