--- a/python/Jupyter_Notebooks/Untitled.ipynb
+++ b/python/Jupyter_Notebooks/Untitled.ipynb
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9bdc075d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"data/Coswara_processed/pickles/2023_02_22_mfcc_combined_breaths_3s_22kHz_.pickle\", \"rb\") as f:\n",
+    "with open(f\"data/Coswara_processed/pickles/2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle\", \"rb\") as f:\n",
     "    feature_set1 = pickle.load(f)"
    ]
   },
@@ -44,22 +44,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Feature Set - #Participants: 2257\n",
+      "Feature Set - #Participants: 4450\n",
       "----------------------------------------------------\n",
       "type_of_features:    mfcc\n",
       "n_time_steps:        259\n",
       "n_features:          15\n",
       "sample_rate:         22050\n",
-      "n_fft:               4096\n",
+      "n_fft:               8192\n",
       "window_length:       512\n",
-      "hop_size:            512\n",
+      "hop_size:            256\n",
       "fmin:                0\n",
       "fmax:                11025\n",
-      "hop_size_ms:         23.22\n",
+      "hop_size_ms:         11.61\n",
       "window_length_ms:    23.22\n",
-      "duration_seconds:    6.01\n",
-      "fft_res_hz:          5.38\n",
+      "duration_seconds:    3.01\n",
+      "fft_res_hz:          2.69\n",
       "-------------------Augmentations--------------------\n",
+      "AddGaussianNoise:    'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
+      "PitchShift:          'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
+      "TimeStretch:         'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
+      "Gain:                'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
       "----------------------------------------------------\n"
      ]
     }
