add jupyter lab on laptop

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+      "C:\\Michi\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-28_PredictionLevelMIL_mfcc_mfcc_mil_combined_cough_bag_statistics_linear_combination4.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-02-26_brogrammers_mfccs_3s_combined_coughs_uploaded_augments_again-maybe_wrong_file_before.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -44,11 +44,11 @@
       "           ignore_first_n_epochs:         5\n",
       "\n",
       "Datasets used:\n",
-      "mfcc_mil_combined_cough\n",
-      "           dataset_class:                 <class 'datasets.MultipleInstanceLearningMFCC'>\n",
+      "mfccs_3s_combined_coughs\n",
+      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
       "           participants_file:             2023_02_23_mfcc_combined_coughs_3s.pickle\n",
-      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle', '2023_02_26_mfcc_combined_coughs_3s_x2x2augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 4292  -  label '1': 2700\n",
+      "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 1077  -  label '1': 263\n",
       "           types_of_recording:            combined_coughs\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -67,22 +67,14 @@
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
-      "           model:                         PredLevelMIL\n",
+      "           model:                         BrogrammersModel\n",
       "           optimizer:                     Adam \n",
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
-      "           folds per run:                 1\n",
-      "           epochs:                        80\n"
+      "           parameter runs:                36\n",
+      "           folds per run:                 5\n",
+      "           epochs:                        120\n"
      ]
     }
    ],
@@ -93,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4918e1454c2a43178d7409ee4b8ed56f",
+       "model_id": "63f40f1239ed44eaadee8fb14df4b64a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -170,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b48a0a5abcb4aa58bfc725737a6effd",
+       "model_id": "3f70bfde4c5643618153b0872f66badc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "551ad021d0f849b8a241f727f2abac73",
+       "model_id": "f5057b83d6ef4ef7846c5d6606d71c4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1490c59d38164fa1be856d6a507ad712",
+       "model_id": "7e7a8ca01585457e8e179c3483514c2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -309,12 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8214d7299d5453ab78a2bd581cba0d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '0.0003', 'wd': '0.0001',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
@@ -336,63 +343,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab5b5b8-c565-4899-8d90-fb9abc0249a8",
+   "id": "e11f3b31",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import torch\n",
-    "import scipy"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0571c5-1275-4792-a36e-937d0c4cdf2b",
+   "id": "da255491",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = torch.randn((8))\n",
-    "a.requires_grad = True\n",
-    "a"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44fd4ec0-bf0f-42e8-befb-58cbcf5c02de",
+   "id": "7c0957ad",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a.mean(), a.median(), a.std(), a.min(), a.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0195908-7f64-4309-afc0-5adde2e5a091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = torch.Tensor([a.mean(), a.median(), a.std(), a.min(), a.max()])\n",
-    "b.requires_grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d38453a9-d1d0-4bee-ac5e-7df78a8046c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.stack([a.mean(), a.median(), a.std(), a.min(), a.max()])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
